# unet4monuseg

./: .gitignore  README.md  pyproject.toml  run_experiments.sh
examples/: he_to_binary_mask.py
src/: count.py  download.py  evaluate.py  predict.py  preprocess.py  train.py
src/lib/augmentation/: __init__.py  augmentation.py  augmentation_class.py
src/lib/data/: __init__.py  data_subset.py  dataset_structure.py  monuseg_dataset.py
src/lib/mask/: __init__.py  cell_count.py  cell_count_patch.py
src/lib/metrics/: __init__.py  dice.py
src/lib/model/: unet.py
src/lib/parse/: __init__.py  mask_parse.py
src/lib/transform/: __init__.py  overlapping_patches.py  quadrants.py  stitch_patches.py
src/lib/util/: device.py  early_stopping.py  file.py  model.py  plot.py  predict.py
