[project]
name = "DL4MI24"
version = "0.1.0"
description = "Deep Learning for Medical Imaging Project 2024 - Topic 5: Segmentation and Cell Counting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.0",
    "gdown>=5.2.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scikit-image>=0.24.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.389",
    "ruff>=0.7.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
# Only check files in the `src` folder
files = "src"

[tool.ruff]
# Only inspect the `src` folder
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = ["T201"]
extend-select = ["I"]
